--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@babel/core": "^7.15.5",
     "@babel/runtime": "^7.15.4",
     "@react-native-community/eslint-config": "^3.0.1",
+    "@types/react": "^17.0.27",
+    "@types/react-native": "^0.65.5",
     "babel-jest": "^27.2.4",
     "eslint": "^7.32.0",
     "jest": "^27.2.4",
     "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "typescript": "^4.4.3"
   },
   "jest": {
     "preset": "react-native"
