--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,5 +34,9 @@ allprojects {
 
         google()
         maven { url 'https://www.jitpack.io' }
+
+        maven {
+            url "$rootDir/../node_modules/detox/Detox-android"
+        }
     }
 }
