--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^17.0.27",
     "@types/react-native": "^0.65.5",
     "babel-jest": "^27.2.4",
+    "detox": "^19.0.0",
     "eslint": "^7.32.0",
     "jest": "^27.2.4",
     "metro-react-native-babel-preset": "^0.66.2",
